fix(races): verify date on safari, wrap input groups and space on mobile view

--- a/src/components/lhl/lhl.scss
+++ b/src/components/lhl/lhl.scss
@@ -77,3 +77,10 @@
   background-color: #fdd;
   padding: 3px 5px;
 }
+
+@media only screen and (max-width: 578px) {
+  .race-row > div {
+    margin-top: 2px;
+    margin-bottom: 2px;
+  }
+}
